- update dependencies - implement WebFinger in the service directly, no longer need external   WebFinger service - better display of development mode, still visible, less obtrusive

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -56,6 +56,10 @@ p.err a {
     color: #000;
 }
 
+span.err {
+    color: #c00;
+}
+
 p.plain {
     background-color: #eee; 
     border: 1px solid #ccc;
